@@ -10,32 +10,23 @@ public class RifleTower extends Tower {
         setGroundTargeting(true);
         setAirTargeting(true);
         setDamage(30);
-        setFireRate(1000);
-        setRange(new Circle(x, y, 100));
+        setFireRate(2000);
+        setRange(new Circle(x, y, 1100));
         //setProjectileImagePath();
         //setDamageType();
-        setProjectileSpeed(50);
+        setProjectileSpeed(1);
         setProjectileExplosionRadius(0);
         setImage(Toolkit.getDefaultToolkit().getImage("resources/Towers/BasicGunBody.png"));
     }
 
-    public void attack(){
-        //create an array of enemies within its range
-        //setWithin(findTargets());
-        //fires at the enemy closest to base
-        if(getWithin() != null) {
-            setTarget(getWithin().getFirst());
-            //Creates action listener updates projectile based on timer
-            ActionListener shoot = new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent e) {
-                    setTargetX(getWithin().get(0).getX());
-                    setTargetY(getWithin().get(0).getY());
-                    new Projectile(getProjectileImagePath(), getDamageType(), getDamage(), getProjectileSpeed(), getProjectileExplosionRadius(), getX(), getY(), getTargetX(), getTargetY(), getTarget());
-                }
-            };
-            Timer t = new Timer((int) (getFireRate()), shoot);
-            t.start();
-        }
+    public void attack() {
+        setTarget(getWithin().getFirst());
+        Projectile temp;
+        Thread t;
+        temp = new Projectile(getProjectileImagePath(), getDamageType(), getDamage(), getProjectileSpeed(), getProjectileExplosionRadius(), getX(), getY(), getTargetX(), getTargetY(), getTarget());
+        t = new ProjectileThread(temp);
+        t.start();
+        getPro().add(temp);
+        getShots().add(t);
     }
 }
